--- a/proyectoPanel/paginaDetallesPedido/estilos/detallePedido.css
+++ b/proyectoPanel/paginaDetallesPedido/estilos/detallePedido.css
@@ -12,12 +12,11 @@
 .cabecera {
     display: flex;
     flex-direction: column;
-    background-image: url("../imagenesPanel/imagenesFondo/fondoCabecera.jpg");
+    background-image: url("../../imagenesPanel/imagenesFondo/fondoCabecera.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
-
     position: fixed;
     top: 0;
 }
@@ -41,33 +40,24 @@
     width: 40px;
 }
 
-
-.cabecera .iconosNav {
+.cabecera .iconosNav {   
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 95%;
+    width: 100%;
 }
 
-.iconosCab .contIconoVolver , .iconosCab .iconosNav .contIcono {
-    border-radius: 100%;
+
+ .iconosNav .icoCerrarSesion, .iconosNav .icoCarta { 
+    width: 40px; 
 }
 
-.iconosCab .iconosNav .icoCerrarSesion {
-    width: 35px;
+ .iconosNav .icoLista { 
+    width: 50px; 
 }
 
-.iconosCab .iconosNav .icoCarta {
-    width: 35px;
-}
-
-.iconosCab .iconosNav .icoLista {
-    width: 43px;
-    margin: 5px 10px;
-}
-
-.iconosCab .iconosNav img {
-    margin: 0 10px;
+ .iconosNav img { 
+    margin: 3px 20px; 
 }
 
 
@@ -83,12 +73,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     width: 190px;
     height: 160px;
     border-radius: 100%;
     margin: 10px auto;
-
     background-color: rgb(255, 255, 255, 0.85);
 }
 
@@ -119,11 +107,6 @@
 
 
 .cuerpo {
-       /* background-color: hsla(32, 58%, 55%, 0.85);*/
-
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     margin-top: 275px;
     display: flex;
     flex-direction: column;
@@ -138,23 +121,12 @@
 
     padding: 10px;
     margin-top: 120px;
-   /* background-color: hsla(32, 58%, 55%, 0.85);
-    background-color: hsla(32, 48%, 59%);*/
-    background-color: hsla(32, 63%, 66%, 0.95);
     background-color: hsla(32, 97%, 61%, 0.55);
-    background-color: whitesmoke;
-    background-color: hsla(32, 97%, 61%, 0.55);
-
     box-shadow: 4px 4px 4px 2px  rgb(25, 54, 95, 0.85);;
-
     width: 70%;
-    /*border: 1px solid black;*/
     border-radius: 10px;
 }
 
-.tablaDetallesPedido th, .tablaDetallesPedido td {
-    text-align: center;
-}
 
 .tablaDetallesPedido th, .tablaDetallesPedido td {
     padding: 10px;
@@ -178,9 +150,6 @@
     border: 1px solid black;
     border-radius: 3%;
     margin-bottom: 120px;
-    background-color: hsla(32, 48%, 59%, 0.70);
-    background-color: hsla(32, 97%, 61%, 0.85);
-    background-color: whitesmoke;
     background-color: hsla(32, 97%, 61%, 0.55);
     width: 70%;
     border-radius: 10px;
