--- a/proyectoPanel/paginaListaPedidos/estilos/listaPedidos.css
+++ b/proyectoPanel/paginaListaPedidos/estilos/listaPedidos.css
@@ -26,7 +26,8 @@
 
 /*--------------ICONOS DE LA CABECERA-----------*/
 
-.cabecera .iconosNav {  /* Estilo del contenedor de iconos */ 
+/* Estilo del contenedor de iconos */ 
+.cabecera .iconosNav {  
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -55,23 +56,20 @@
 
 /*---------------LOGO ----------------*/
 
-
-.contLogo { /* Estilo del contenedor del logo */
+/* Estilo del contenedor del logo */
+.contLogo { 
     display: flex;
     justify-content: center;
     align-items: center;
-
     width: 190px;
     height: 160px;
     border-radius: 100%;
     margin: 10px auto;
-
     background-color: rgb(255, 255, 255, 0.85);
 }
 
-
-.cabecera .contLogo .logo { /* Estilo del logo */
-
+/* Estilo del logo */
+.cabecera .contLogo .logo { 
     width: 150px;
     margin: 10px;
 }
@@ -110,7 +108,6 @@
     margin: 70px auto;
     padding: 20px;
     margin-top: 50px;
-
     background-color: hsla(32, 97%, 61%, 0.55);
     border: 1px solid black;
     border-radius: 20px;
@@ -131,8 +128,7 @@
 }
 
 
-/*Colores de los estados*/
-
+/*Color pedidos entregados*/
 .tablaPedidos .Entregado {
     background-color: rgb(151, 173, 114);
 }
@@ -154,8 +150,6 @@
 .footer {
     background-color: rgb(25, 54, 95, 0.85);
     padding: 20px;
-    position: fixed;
-    bottom: 0;
     margin: 0;
     width: 100%;
 }
