--- a/proyectoPanel/paginaModificarProducto/estilos/modificarProductoMovil.css
+++ b/proyectoPanel/paginaModificarProducto/estilos/modificarProductoMovil.css
@@ -1,3 +1,19 @@
+/*DISEÑO RESPONSIVE PANTALLAS PEQUEÑAS*/
+
+/* Estilo contenedor iconos cabecera */
+
+body .cabecera .iconosNav  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cabecera .contIconoVolver {
+    width: 50px;
+}
+
+/* Estilo formulario */
+
 .cuerpo .formularioModif {
     width: 100%;
     margin: 0;
